--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Other page are generate from collection _people
 
 <br>
 
-<h3>Proč jsou Piráti pro Středočeský kraj tou správnou volbou?</h3>
+<h3>Proč jsou Piráti pro Jihoočeský kraj tou správnou volbou?</h3>
 
 
 
