--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Other page are generate from collection _people
 
 <br>
 
-<h3>Proč jsou Piráti pro Jihočeský kraj tou správnou volbou?</h3>
+<h3>test Proč jsou Piráti pro Jihočeský kraj tou správnou volbou?</h3>
 
 
 
