--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿---
+---
 layout: lide
 ---
 
@@ -9,7 +9,7 @@ Other page are generate from collection _people
 
 <br>
 
-<h3>test testaa Proč jsou Piráti pro Jihočeský kraj tou správnou volbou?</h3>
+<h3>Proč jsou Piráti pro Středočeský kraj tou správnou volbou?</h3>
 
 
 
