--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Other page are generate from collection _people
 
 <br>
 
-<h3>Proč jsou Piráti pro Středočeský kraj tou správnou volbou?</h3>
+<h3>Jsou Piráti pro Jihočeský kraj tou správnou volbou?</h3>
 
 
 
@@ -19,10 +19,24 @@ Other page are generate from collection _people
   a transparentní opatření úspěšně zavádět.
   Pojďme ulehčit od zbytečných výdajů plynoucích do nesprávných kapes
   i rozpočtu Jihočeského kraje.</p>
+  
+  <p>Jako největší problém kraje vnímáme pramalou možnost občanů kontrolovat odvedenou práci zvolených zastupitelů 
+  a zároveň kontrolovat co přesně se děje s veřejnými penězi. Občan nemá možnost snadno a bez obstrukcí zjistit kde končí finance,
+  se kterými kraj hospodaří. Nemá možnost lehce na "dvě kliknutí" nahlédnout do smluv uzavřených krajem a posoudit tak,
+  zda je smlouva výhodná či nikoliv. Je dnes již téměř folklórem a můžete se každý týden potkat s minimáně jednou kauzou,
+  kde je na první pohled zřejmé, že dochází k vyvádění veřejných peněz do soukromých kapes. Je to dnes natolik běžný jev
+  , že si na to občané už natolik zvykli, že to vnímají jako samozžejmost, nikdo proti tomu neprotestuje a co je nejhorší nikdo za to není potrestán.
+  Kde není důvěra, musí být kontrola!
+  </p>
+  
+  <p>Pokud by se podařilo nastavit taková opatření, aby bylo možné cestu veřejných peněz snadno monitorovat, nebyl by
+  pro takovéto "odklánění" peněz z rozpočtu kraje najednou prostor. Díky tomu by se mnohem snadněji řešili ostatní problémy, které 
+  kraj trápí například v dopravě, školství a zdravotnictví, protože by na řešení těchto problémů bylo v rozpočtu více peněz.</p>
 
-  <p>Propracovaný program máme i v oblasti dopravy, školství nebo počítačových sítí.
-    Našimi kandidáty nejsou léta se u moci držící papalášové, ale aktivní lidé,
-    které trápí stejné problémy jako vás, a rozhodli se tak s nimi sami pohnout.
+  <p>Mimo snahy zprůhlednit toky veřejných peněz mají Piráti také propracovaný program napříč všemi odvětvími lidského žití.
+    Našimi kandidáty nejsou léta se u moci držící papalášové, kteří se jakémukoliv nahlédnutí tzv. pod pokličku urputně
+    brání, ale aktivní lidé,
+    které trápí stejné problémy jako Vás, a rozhodli se s nimi sami pohnout. Je teď na Vás, zda jim s tím pomůžete a dáte jim šanci.
     V dopravě se zasadíme o propojený systém, v němž bude možno kombinovat na sebe
     logicky navazující spoje, postavíme se proti rušení malých škol
     a místo počítačového systému za desítky milionů zavedeme svobodný software,
