--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@ Other page are generate from collection _people
 
 <h3>Jsou Piráti pro Jihočeský kraj tou správnou volbou?</h3>
 
-
-
-<p>Piráti představují novou netradiční stranu nezatíženou korupčními a klientelistickými skandály.
+<p style="text-align: justify">
+    Piráti představují novou netradiční stranu nezatíženou korupčními a klientelistickými skandály.
   Fungujeme plně transparentně a tyto principy bychom rádi přenesli na krajskou i celostátní úroveň.
   V Praze nebo Brně se našim zastupitelům daří na korupční skandály upozorňovat
   a transparentní opatření úspěšně zavádět.
   Pojďme ulehčit od zbytečných výdajů plynoucích do nesprávných kapes
-  i rozpočtu Jihočeského kraje.</p>
+  i rozpočtu Jihočeského kraje.
+  </p>
   
-  <p>Jako největší problém kraje vnímáme pramalou možnost občanů kontrolovat odvedenou práci zvolených zastupitelů 
+  <p style="text-align: justify">
+    Jako největší problém kraje vnímáme pramalou možnost občanů kontrolovat odvedenou práci zvolených zastupitelů 
   a zároveň kontrolovat co přesně se děje s veřejnými penězi. Občan nemá možnost snadno a bez obstrukcí zjistit kde končí finance,
   se kterými kraj hospodaří. Nemá možnost lehce na "dvě kliknutí" nahlédnout do smluv uzavřených krajem a posoudit tak,
   zda je smlouva výhodná či nikoliv. Je dnes již téměř folklórem a můžete se každý týden potkat s minimáně jednou kauzou,
@@ -29,20 +30,23 @@ Other page are generate from collection _people
   Kde není důvěra, musí být kontrola!
   </p>
   
-  <p>Pokud by se podařilo nastavit taková opatření, aby bylo možné cestu veřejných peněz snadno monitorovat, nebyl by
-  pro takovéto "odklánění" peněz z rozpočtu kraje najednou prostor. Díky tomu by se mnohem snadněji řešili ostatní problémy, které 
-  kraj trápí například v dopravě, školství a zdravotnictví, protože by na řešení těchto problémů bylo v rozpočtu více peněz.</p>
+  <p style="text-align: justify">
+    Pokud by se podařilo nastavit taková opatření, aby bylo možné cestu veřejných peněz snadno monitorovat, nebyl by
+  pro takovéto "odklánění" peněz z rozpočtu kraje najednou prostor. Díky tomu by se mnohem snadněji řešili ostatní problémy,
+  které kraj trápí například v dopravě, školství a zdravotnictví, protože by na řešení těchto problémů bylo
+  v rozpočtu více peněz.
+  </p>
 
-  <p>Mimo snahy zprůhlednit toky veřejných peněz mají Piráti také propracovaný program napříč všemi odvětvími lidského žití.
+  <p style="text-align: justify">
+      Mimo snahy zprůhlednit toky veřejných peněz mají Piráti také propracovaný program napříč všemi odvětvími lidského žití.
     Našimi kandidáty nejsou léta se u moci držící papalášové, kteří se jakémukoliv nahlédnutí tzv. pod pokličku urputně
-    brání, ale aktivní lidé,
-    které trápí stejné problémy jako Vás, a rozhodli se s nimi sami pohnout. Je teď na Vás, zda jim s tím pomůžete a dáte jim šanci.
-    V dopravě se zasadíme o propojený systém, v němž bude možno kombinovat na sebe
-    logicky navazující spoje, postavíme se proti rušení malých škol
-    a místo počítačového systému za desítky milionů zavedeme svobodný software,
-    který je v porovnání s komerčním řešením citelně levnější. Zasadíme se o rozvoj moderního kraje rovných příležitostí,
-    který bude reflektovat vývoj digitalizované společnosti a na kličkování politiků
-    před poskytnutím informací v něm nebude místo. </p>
+    brání, ale aktivní lidé, které trápí stejné problémy jako Vás, a rozhodli se s nimi sami pohnout. Je teď na Vás,
+    zda jim s tím pomůžete a dáte jim šanci. V dopravě se zasadíme o propojený systém, v němž bude možno kombinovat na sebe
+    logicky navazující spoje, postavíme se proti rušení malých škol    a místo počítačového systému za desítky milionů
+    zavedeme svobodný software, který je v porovnání s komerčním řešením citelně levnější. 
+    Zasadíme se o rozvoj moderního kraje rovných příležitostí, který bude reflektovat vývoj digitalizované 
+    společnosti a na kličkování politiků před poskytnutím informací v něm nebude místo. 
+    </p>
 
     <br>
 
