--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Other page are generate from collection _people
 
     <br>
 
-<iframe width="400" height="300" src="https://www.youtube.com/watch?v=UgzpFjlHar4" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/UgzpFjlHar4" frameborder="0" allowfullscreen></iframe>
 
 <br>
 
