--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ Other page are generate from collection _people
     </p>
 
     <br>
-
+<center> 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/UgzpFjlHar4" frameborder="0" allowfullscreen></iframe>
-
+</center>
 <br>
 
 <!-- články k tématu -->
