--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -10,34 +10,34 @@ layout: default
     <div class="media-object">
       <div class="media-object-section">
         <div class="thumbnail" >
-          <img style="height: 65px;" src= "https://forum.pirati.cz/download/file.php?avatar=8116_1460972963.jpg">
+          <img style="height: 65px;" src= "https://forum.pirati.cz/download/file.php?avatar=8785_1385485739.jpg">
         </div>
       </div>
       <div class="media-object-section main-section">
 
-        <h6><a href="{{ '/lide/frantisek-kopriva/' | prepend: site.baseurl }}">František Kopřiva</a></h6>
-        <p>frantisek.kopriva@pirati.cz<br>lídr kandidátky</p>
+        <h6><a href="{{ '/lide/michal-horak/' | prepend: site.baseurl }}">Michal Horák</a></h6>
+        <p>michal.horak@pirati.cz<br>lídr kandidátky</p>
       </div>
     </div>
     <div class="media-object">
       <div class="media-object-section">
         <div class="thumbnail">
-          <img style="height: 65px;" src= "https://forum.pirati.cz/download/file.php?avatar=6116_1388851177.jpg">
+          <img style="height: 65px;" src= "https://forum.pirati.cz/download/file.php?avatar=7870_1383393767.jpg">
         </div>
       </div>
       <div class="media-object-section main-section">
-        <h6><a href="{{ '/lide/lenka-kozlova/' | prepend: site.baseurl }}">Lenka Kozlová</a></h6>
-        <p>lenka.kozlova@pirati.cz<br>předsedkyně krajského sdružení</p>
+        <h6><a href="{{ '/lide/lukas-kolarik/' | prepend: site.baseurl }}">Lukáš Kolářík</a></h6>
+        <p>lenka.kozlova@pirati.cz<br>místopředseda krajského sdružení</p>
       </div>
     </div>
     <div class="media-object">
       <div class="media-object-section">
         <div class="thumbnail">
-          <img style="height: 65px;" src= "https://forum.pirati.cz/download/file.php?avatar=10303_1455354728.jpg">
+          <img style="height: 65px;" src= "https://forum.pirati.cz/download/file.php?avatar=1512_1410462762.jpg">
         </div>
       </div>
       <div class="media-object-section main-section">
-        <h6><a href="{{ '/lide/vladimir-sebor/' | prepend: site.baseurl }}">Vladimír Šebor</a></h6>
+        <h6><a href="{{ '/lide/vladimir-sebor/' | prepend: site.baseurl }}">Jan Novák</a></h6>
         <p>vladimir.sebor@pirati.cz<br>volební manažer</p>
       </div>
     </div>
@@ -56,19 +56,19 @@ layout: default
     <h3>Představitelé</h3>
 
     <dl>
-      <dt>Lenka Kozlová</dt>
+      <dt>Ivo Vlasatý</dt>
       <dd>předsedkyně</dd>
       <p></p>
-      <dt>František Kopřiva</dt>
+      <dt>Václav Urban</dt>
       <dd>1. místopředseda</dd>
       <p></p>
-      <dt>Petr Procházka</dt>
+      <dt>Lukáš Kolářík/dt>
       <dd>2. místopředseda</dd>
       <p></p>
-      <dt>Lubor Jenček</dt>
+      <dt>Josef Krajc</dt>
       <dd>3. místopředseda</dd>
       <p></p>
-      <dt>Vladimír Lánský</dt>
+      <dt>Jindra Matlachová</dt>
       <dd>4. místopředseda</dd>
     </dl>
   </div>
