--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -27,7 +27,7 @@ layout: default
       </div>
       <div class="media-object-section main-section">
         <h6><a href="{{ '/lide/lukas-kolarik/' | prepend: site.baseurl }}">Lukáš Kolářík</a></h6>
-        <p>lenka.kozlova@pirati.cz<br>místopředseda krajského sdružení</p>
+        <p>lukas.kolarik@pirati.cz<br>místopředseda krajského sdružení</p>
       </div>
     </div>
     <div class="media-object">
@@ -38,7 +38,7 @@ layout: default
       </div>
       <div class="media-object-section main-section">
         <h6><a href="{{ '/lide/vladimir-sebor/' | prepend: site.baseurl }}">Jan Novák</a></h6>
-        <p>vladimir.sebor@pirati.cz<br>volební manažer</p>
+        <p>jan.novak@pirati.cz<br>volební manažer</p>
       </div>
     </div>
 
@@ -57,7 +57,7 @@ layout: default
 
     <dl>
       <dt>Ivo Vlasatý</dt>
-      <dd>předsedkyně</dd>
+      <dd>předseda</dd>
       <p></p>
       <dt>Václav Urban</dt>
       <dd>1. místopředseda</dd>
