--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -62,7 +62,7 @@ layout: default
       <dt>Václav Urban</dt>
       <dd>1. místopředseda</dd>
       <p></p>
-      <dt>Lukáš Kolářík/dt>
+      <dt>Lukáš Kolářík</dt>
       <dd>2. místopředseda</dd>
       <p></p>
       <dt>Josef Krajc</dt>
