--- a/kalendar/index.html
+++ b/kalendar/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="row">
   <div class="columns large-9">
-    <h2 id="praha">Jihočeský kraj</h2>
+    <h2 id="jih">Jihočeský kraj</h2>
     <iframe src="https://calendar.google.com/calendar/embed?title=Pir%C3%A1ti%20-%20Jiho%C4%8Desk%C3%BD%20kraj&amp;mode=AGENDA&amp;height=600&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=har1dmou53l37fbr4lci4prbhc%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=Europe%2FPrague" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     <h2 id="celostatni">Celostátní kalendář</h2>
     <iframe src="https://calendar.google.com/calendar/embed?title=Pir%C3%A1ti%20Praha&amp;showTitle=0&amp;showPrint=0&amp;showTz=0&amp;height=600&amp;wkst=2&amp;hl=cs&amp;bgcolor=%23FFFFFF&amp;src=kddvdvu3adcjef2kro4j6mm838%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=Europe%2FPrague" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
@@ -16,7 +16,7 @@ layout: default
     <p>Akce pro veřejnost evidujeme v&nbsp;kalendářích, které si snadno můžete nasdílet.</p>
     <p>Kalendáře jsou pro větší přehlednost dva:<p>
     <ul>
-      <li><a href="#praha">Jihočeský kraj</a></li>
+      <li><a href="#jih">Jihočeský kraj</a></li>
       <li><a href="#celostatni">Celostátní</a></li>
     </ul>
   </div>
