--- a/program/index.html
+++ b/program/index.html
@@ -14,7 +14,7 @@ layout: default
     <div class="media-object-section">
       <hr/>
 
-      <p style="text-align: justify>Naším cílem je kraj nové generace, kde může každý člověk svůj život prožít svobodně a naplno.
+      <p style="text-align: justify">Naším cílem je kraj nové generace, kde může každý člověk svůj život prožít svobodně a naplno.
         Klíčem k prosperitě naší společnosti je otevřenost, transparentnost, svoboda informací, kvalitní veřejné služby, použití nových technologií a zapojení občanů do rozhodování.
         Piráti nabízí alternativu kraje bez korupce, nesmyslných dotací, politických trafik a klientelismu.
         Chceme, aby krajské úřady nebyly pro aktivní občany byrokratickou překážkou, nýbrž příležitostí zapojit se do veřejného dění a kultivace svého okolí.
