--- a/program/index.html
+++ b/program/index.html
@@ -40,25 +40,25 @@ layout: default
       dle tohoto zákona, tedy i ty s hodnotou nižší než 50 000 Kč. Zároveň hodláme zveřejňovat i faktury, které vypovídají 
       o reálných částkách vyplacených na základě smluvních vztahů.</p>
 
-      <p><b>Zavedeme transparentní účetnictví kraje.</b></p>
+      <b>Zavedeme transparentní účetnictví kraje.</b>
 
       <p>Občané dnes nemají šanci zjistit, kolik peněz bylo komu a za co zaplaceno. Chceme, aby kraj přešel k využívání otevřeného
       účetnictví všude tam, kde to zákon dovoluje. Všichni tak budou moci kontrolovat, za co konkrétně se finanční prostředky 
       kraje utrácejí. Pro společnosti, ve kterých je většinovým vlastníkem kraj, musí platit stejné povinnosti otevřeného 
       hospodaření jako pro kraj samotný.</p>
 
-      <p><b>Všechny veřejné zakázky budou skutečně veřejné.</b></p>
+      <b>Všechny veřejné zakázky budou skutečně veřejné.</b>
 
       <p>Celou zadávací dokumentaci zveřejníme dostatečně dlouhou dobu předem na Internetu. Stejným způsobem budou průběžně 
       zveřejňovány i další informace o veřejné zakázce. O výběrovém řízení se tak dozví mnohem více dodavatelů a nestane se,
       že se do záměrně utajovaného řízení přihlásí jen firma, které dal příslušný úředník vědět.</p>
 
-      <p><b>Rozšíříme informace zveřejňované o dotacích.</b></p>
+      <b>Rozšíříme informace zveřejňované o dotacích.</b>
 
       <p>U poskytnutých dotací budeme zveřejňovat i jejich vyúčtování, aby každý viděl, kam veřejné prostředky
       nakonec doputovaly.</p>
 
-      <p><b>Podpoříme internetové aukce a další moderní nástroje pro veřejné zakázky.</b></p>
+      <b>Podpoříme internetové aukce a další moderní nástroje pro veřejné zakázky.</b>
 
       <p>Výběrová řízení na služby, které nabízí velký počet poskytovatelů, by měla probíhat formou internetové aukce. 
       Kraj stanoví nejvyšší cenu, kterou je ochoten zaplatit, a způsob zohlednění kvality služeb v aukci. Nabídky dodavatelů 
@@ -70,7 +70,7 @@ layout: default
       
       <h4>Budeme hospodařit efektivně</h4>
       
-     <b><p>Povedeme úřady a organizace zřízené krajem k úspornému hospodaření.</b></p>
+     <b>Povedeme úřady a organizace zřízené krajem k úspornému hospodaření.</b>
 
       <p>Úředníci jsou v dnešním systému přidělování krajských či státních peněz nuceni vyčerpat celou přidělenou částku, 
       jinak jsou často svým nadřízeným potrestáni, protože zbytek nevyčerpaných peněz se vrací. Tento systém je podle nás
@@ -79,19 +79,19 @@ layout: default
       nevyčerpaných peněz do dalšího roku. Úspory v jednom roce nesmí být automaticky důvodem pro snížení rozpočtu v roce
       následujícím. Obdobně by to mělo fungovat i v organizacích zřízených krajem.</p>
 
-      <b><p>Budeme koordinovat hromadné nákupy vybavení, kde lze dosáhnout množstevních slev.</b></p>
+      <b>Budeme koordinovat hromadné nákupy vybavení, kde lze dosáhnout množstevních slev.</b>
 
       <p>V případech, kdy je možné nakupovat hromadně za nižší ceny, je potřeba posílit spolupráci mezi jednotlivými odděleními 
       krajského úřadu a mezi jednotlivými kraji navzájem. Pro nákup služeb a v dalších případech, kde to bude vhodné, 
       využijeme centrální zadávání.</p>
 
-      <b><p>Prosazujeme důslednější využití evropských dotací a informování všech příjemců, kteří připadají v úvahu.</b></p>
+      <b>Prosazujeme důslednější využití evropských dotací a informování všech příjemců, kteří připadají v úvahu.</b>
 
       <p>Krajské úřady rozdělují značnou část evropských dotací. Evropské dotace však často nejsou plně využity, protože se pro
       ně nenajdou vhodné projekty nebo spolufinancování. Kraj by měl proto vystupovat aktivně a informovat o možnostech získání
       dotací všechny projekty ve svém kraji.</p>
 
-      <b><p>Snížíme byrokracii.</b></p>
+      <b>Snížíme byrokracii.</b>
 
       <p>Odstraníme přebujelou byrokracii v krajských orgánech a na krajských úřadech, při úřadování chceme naopak lépe využívat 
       nové technologie. Komunikace s úřadem by měla probíhat primárně elektronickou cestou. Umělé zvyšování zaměstnanosti
@@ -100,7 +100,7 @@ layout: default
       být neschopní či zkorumpovaní úředníci. Naopak chceme motivovat pracovité a poctivé zaměstnance, kteří jsou podmínkou
       hladkého chodu úřadu a spokojenosti občanů.</p>
 
-      <b><p>Preferujeme vyrovnaný rozpočet.</b></p>
+      <b>Preferujeme vyrovnaný rozpočet.</b>
 
       </p>Nemáme právo zadlužovat naše děti a přivést kraj do vleklých finančních problémů. Kraj by si měl tvořit rezervu pro 
       nenadálé situace a plánování větších investic důležitých pro další rozvoj obcí a kraje.</p>
