--- a/program/index.html
+++ b/program/index.html
@@ -319,9 +319,9 @@ hromadné. Musí probíhat na principu otevřených standardů a nemá končit n
 <p>Chceme dosáhnout stavu, kdy si člověk při nástupu do místního autobusu bude moci koupit lístek, který mu vydrží
 až do centra velkého města, a to i v případě, že během cesty využije vlak. Propojování dopravních systémů není rozumné
 zavádět pomocí velikášských projektů typu Opencard. Lepší je nabídnout jednotlivým přepravcům otevřený systém, ke kterému
-se mohou přidat.</p>
+se mohou přidat.
 
-<b>Budeme poskytovat data o prostředcích veřejné dopravy tak, aby je mohly využívat různé komerční i nekomerční aplikace.</b>
+Budeme poskytovat data o prostředcích veřejné dopravy tak, aby je mohly využívat různé komerční i nekomerční aplikace.</p>
 
 <h4>Využijeme příležitosti pro cestovní ruch</h4>
 
