--- a/kandidatka/index.html
+++ b/kandidatka/index.html
@@ -19,65 +19,65 @@ layout: default
     <tbody>
       <tr>
         <td>1</td>
-        <td>František Kopřiva (20)</td>
-        <td>Student elektrotechniky, copywriter</td>
-        <td>Mladá Boleslav</td>
+        <td>Michal Horák (?)</td>
+        <td>?</td>
+        <td>Písek</td>
         <td>Piráti</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>Viktor Mahrik (34)</td>
-        <td>Manažer výzkumu navštěvovanosti českého Internetu</td>
-        <td>Jesenice</td>
+        <td>Lukáš Kolářík (32)</td>
+        <td>živnostník, správa datové sítě, servis IT</td>
+        <td>Katovice</td>
         <td>Piráti</td>
       </tr>
       <tr>
         <td>3</td>
-        <td>Lenka Kozlová (55)</td>
-        <td>Vychovatelka</td>
-        <td>Milín</td>
+        <td>Jan Novák (?)</td>
+        <td>student</td>
+        <td>Týn nad Vltavou</td>
         <td>Piráti</td>
       </tr>
       <tr>
         <td>4</td>
-        <td>Denys Luksík (23)</td>
-        <td>Student ekonomie, fotbalový trenér</td>
-        <td>Kralupy nad Vltavou</td>
-        <td>BezPP</td>
+        <td>Ljuba Poláková (?)</td>
+        <td>?</td>
+        <td>České Budějovice</td>
+        <td>Piráti</td>
       </tr>
       <tr>
         <td>5</td>
-        <td>Vladimír Šebor (63)</td>
-        <td>Živnostník, správce datových sítí</td>
-        <td>Ježovice</td>
-        <td>BezPP</td>
+        <td>Martin Brož (?)</td>
+        <td>?</td>
+        <td>Písek</td>
+        <td>Piráti</td>
       </tr>
       <tr>
         <td>6</td>
-        <td>Dominika Michailidu (36)</td>
-        <td>výtvarnice, designérka</td>
-        <td>Krnsko</td>
+        <td>Simon Kostadinov (?)</td>
+        <td>student</td>
+        <td>Týn nad Vltavou</td>
         <td>Piráti</td>
       </tr>
       <tr>
         <td>7</td>
-        <td>Milan Müller (43)</td>
-        <td>Králův dvůr</td>
-        <td>Živnostník</td>
-        <td>Piráti</td>
+        <td>Martin Kákona (?)</td>
+        <td>Soběslav</td>
+        <td>?</td>
+        <td>BezPP</td>
       </tr>
       <tr>
         <td>8</td>
-        <td>Petr Procházka (35)</td>
-        <td>Vlakvedoucí</td>
-        <td>Nymburk</td>
+        <td>Romana Klimešová (?)</td>
+        <td>?</td>
+        <td>České Budějovice</td>
         <td>Piráti</td>
       </tr>
       <tr>
         <td>9</td>
-        <td>Tomáš Felix</td>
-        <td></td>
-        <td>Kralupy nad Vltavou</td>
+        <td>Renata Ždárková (?)</td>
+        <td>?</td>
+        <td>České Budějovice</td>
         <td>Piráti</td>
       </tr>
     </tbody>
