fix most visible errors

--- a/kandidatka/index.html
+++ b/kandidatka/index.html
@@ -1,9 +1,7 @@
 ---
-layout: default
+layout: page
 ---
 
-<div class="row">
-<p></p>
   <p>Kandidátní listina České pirátské strany pro volby do zastupitelstva Jihočeského kraje konané ve dnech 7. a 8. října 2016.</p>
 
   <table>
