cleanup: round one, fight!!

--- a/kandidatka/index.html
+++ b/kandidatka/index.html
@@ -1,5 +1,8 @@
 ---
+title: Kandidátní listina
 layout: page
+description: Kandidátní listina České pirátské strany pro volby do zastupitelstva Jihočeského kraje konané ve dnech 7. a 8. října 2016.
+keywords: volby, jihočeši, politika, kandidátka
 ---
 
   <p>Kandidátní listina České pirátské strany pro volby do zastupitelstva Jihočeského kraje konané ve dnech 7. a 8. října 2016.</p>
