--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -1,8 +1,9 @@
 ---
+title: Kontakty
 layout: page
+description: Kandidátní listina České pirátské strany pro volby do zastupitelstva Jihočeského kraje konané ve dnech 7. a 8. října 2016.
+keywords: kontakty, jihočeši, politika
 ---
-
-<br>
 
 <div class="row">
   <div class="large-6 column">
