--- a/kandidatka/index.html
+++ b/kandidatka/index.html
@@ -5,82 +5,15 @@ description: Kandidátní listina České pirátské strany pro volby do zastupi
 keywords: volby, jihočeši, politika, kandidátka
 ---
 
-  <p>Kandidátní listina České pirátské strany pro volby do zastupitelstva Jihočeského kraje konané ve dnech 7. a 8. října 2016.</p>
+<p>Kandidátní listina České pirátské strany pro volby do zastupitelstva Jihočeského kraje konané ve dnech 7. a 8. října 2016.</p>
 
-  <table>
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Jméno a příjmení, věk</th>
-        <th>Povolání</th>
-        <th>Bydliště</th>
-        <th>Politická příslušnost</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
-        <td>Michal Horák (?)</td>
-        <td>?</td>
-        <td>Písek</td>
-        <td>Piráti</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Lukáš Kolářík (32)</td>
-        <td>živnostník, správa datové sítě, servis IT</td>
-        <td>Katovice</td>
-        <td>Piráti</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Jan Novák (?)</td>
-        <td>student</td>
-        <td>Týn nad Vltavou</td>
-        <td>Piráti</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>Ljuba Poláková (?)</td>
-        <td>?</td>
-        <td>České Budějovice</td>
-        <td>Piráti</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>Martin Brož (?)</td>
-        <td>?</td>
-        <td>Písek</td>
-        <td>Piráti</td>
-      </tr>
-      <tr>
-        <td>6</td>
-        <td>Simon Kostadinov (?)</td>
-        <td>student</td>
-        <td>Týn nad Vltavou</td>
-        <td>Piráti</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td>Martin Kákona (?)</td>
-        <td>Soběslav</td>
-        <td>?</td>
-        <td>BezPP</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td>Romana Klimešová (?)</td>
-        <td>?</td>
-        <td>České Budějovice</td>
-        <td>Piráti</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td>Renata Ždárková (?)</td>
-        <td>?</td>
-        <td>České Budějovice</td>
-        <td>Piráti</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="row small-up-1 medium-up-2 large-up-3">
+  {% for item in site.data.kandidatka %}
+  <article class="column">
+    <img src="{{ item.photo }}" alt="fotka {{ item.name }}" class="people" />
+    <h3>{{forloop.index}}. {{ item.name }}</h3>
+    <p>{{ item.town }}, {{ item.member }}, ({{ item.age }} let)</p>
+    <a href="{{ item.profilelink }}">Profil</a>
+  </article>
+  {% endfor %}
 </div>
