--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ layout: page
       frameborder="0" allowfullscreen width="560" height="315" >
     </iframe>
 
+    <h2>Zastupitelé</h2>
+    <ul>
+      <li>V <a href="https://www.pirati.cz/regiony/jiznicechy/pisecko/start">Písku</a> je zastupitelem člen Pirátů Martin Brož.</li>
+      <li>Na soběslavské radnici za vás bojují <a href="http://pirati.sobeslav.cz/volby-2014/nasi-zastupitele/">nezávislí Pirátští zastupitelé</a> Martin Kákona a Iveta Matějů.</li>
+      <li>V Táboře jsme součástí hnutí <a href="">JINAK!</a>, které má tři zastupitele.</li>
+      <li>Náš člen Petr Steinbauer prosazuje Pirátský program ve spolupráci s <a href="http://volbats.cz/program/">Volbou pro město Trhové Sviny</a>.</li>
+    </ul>
   </div>
 
   <div class="small-12 large-6 columns {{ page.style }}">
