--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@ layout: page
       </div>
       <div class="media-object-section">
         <p>
-          Piráti představují novou netradiční stranu nezatíženou korupčními a klientelistickými skandály.
+          <a href="/blog/jsou-pirati-dobrou-volbou/">Piráti představují novou netradiční stranu nezatíženou korupčními a klientelistickými skandály</a>.
           Fungujeme plně transparentně a tyto principy chceme přenést na krajskou úroveň.
           V Praze nebo Brně se našim zastupitelům daří úspěšně zavádět transparentní opatření a upozorňovat na korupční skandály.
-          <a href="/blog/jsou-pirati-dobrou-volbou/">Více</a>
         </p>
-        <h5>To samé chceme dělat s vaší podporou v Jihočeském kraji.</h5>
+        <h5>To samé chceme dělat v Jihočeském kraji. <a href="#podpornas">Podpoř nás.</a></h5>
       </div>
     </div>
   </div>
@@ -45,6 +44,14 @@ layout: page
       frameborder="0" allowfullscreen width="560" height="315" >
     </iframe>
 
+    <h2 id="podpornas">Podpoř nás</h2>
+    <ul>
+      <li><a href="http://www.krajskevolby2016.cz/"><i class="fi-heart"></i> Hlavně přijď k volbám! :)</a></li>
+      <li><a href="https://www.pirati.cz/ao/clen"><i class="fi-torsos-all"></i> Jako člen a aktivní občan</a></li>
+      <li><a href="https://redmine.pirati.cz/"><i class="fi-arrows-in"></i> Jako dobrovolník na některém z projektů</a></li>
+      <li><a href="https://www.pirati.cz/fo/dary"><i class="fi-dollar"></i> Finančním darem</a></li>
+    </ul>
+
     <h2>Zastupitelé</h2>
     <ul>
       <li>V <a href="https://www.pirati.cz/regiony/jiznicechy/pisecko/start">Písku</a> je zastupitelem člen Pirátů Martin Brož.</li>
@@ -52,6 +59,7 @@ layout: page
       <li>V Táboře jsme součástí hnutí <a href="">JINAK!</a>, které má tři zastupitele.</li>
       <li>Náš člen Petr Steinbauer prosazuje Pirátský program ve spolupráci s <a href="http://volbats.cz/program/">Volbou pro město Trhové Sviny</a>.</li>
     </ul>
+
   </div>
 
   <div class="small-12 large-6 columns {{ page.style }}">
