--- a/program/index.html
+++ b/program/index.html
@@ -17,6 +17,54 @@ keywords: program, jihočeši, politika
 </p>
 
 
+<h2><a href="#otevreme_hospodareni">Otevřeme hospodaření kraje</a></h2>
+<ul>
+  <li>Zveřejníme vše, co můžeme, ne jen to, co musíme.</li>
+  <li>Zavedeme transparentní účetnictví kraje.</li>
+  <li>Podpoříme internetové aukce a další moderní nástroje pro veřejné zakázky.</li>
+  <li>Rozšíříme informace zveřejňované o dotacích.</li>
+  <li>Zavedeme automatické zveřejňování informací kraje a závislých organizací.</li>
+  <li>Spustíme portál otevřených dat.</li>
+</ul>
+
+<h2><a href="#zapojime_obcany">Zapojíme občany do rozhodování</a></h2>
+<ul>
+  <li>Úplné podklady na zasedání musí být zásadně zveřejňovány předem, aby se s nimi mohl každý seznámit a uplatnit svoje připomínky.</li>
+  <li>Podporujeme skutečné krajské referendum a občanskou iniciativu.</li>
+  <li>Zřídíme web, který bude od občanů, neziskového sektoru a firem shromažďovat zpětnou vazbu a který umožní veřejnou diskusi.</li>
+  <li>Budeme se zabývat peticemi a stížnostmi, které občané zastupitelům zašlou.</li>
+</ul>
+
+<h2><a href="#moderni_technologie">Prosadíme moderní technologie</a></h2>
+<ul>
+  <li>Informovaný a angažovaný občan je největším spojencem efektivní státní správy. Umožníme každému se takovým občanem stát a zajišťovat spolu s ostatními nestranný dohled nad státní správou.</li>
+  <li>Zajistíme dostupné a předpřipravené formuláře pro odstranění zbytečné byrokracie.</li>
+  <li>Budeme používat svobodné formáty.</li>
+  <li>Zajistíme přechod úřadů na svobodný software kdekoliv je to možné. Svobodný software bude rozšířen i do škol, nemocnic a dalších organizací zřizovaných krajem.</li>
+  <li>Podporujeme volnou přístupnost Internetu ve veřejných prostorách a prostranstvích a institucích.</li>
+</ul>
+
+<h2><a href="#investujeme_do_vzdelani">Investujeme do vzdělání</a></h2>
+<p>Piráti chápou vzdělávání jako nástroj pro osobní rozvoj, nejen pro získání práce.</p>
+<ul>
+  <li>Usnadníme dětem dopravu do škol a pomůžeme zachovat školy i v menších městech.</li>
+  <li>Podpoříme zavádění demokratických principů na úrovni škol.</li>
+  <li>Podpoříme studenty, kteří studují více oborů a také studenty, kteří dosahují nejlepších výsledků.</li>
+  <li>Zajistíme přechod úřadů na svobodný software kdekoliv je to možné. Svobodný software bude rozšířen i do škol, nemocnic a dalších organizací zřizovaných krajem.</li>
+  <li>Podporujeme volnou přístupnost Internetu ve veřejných prostorách a prostranstvích a institucích.</li>
+</ul>
+
+<h2><a href="#ochrana_prostredi">Chráníme životní prostředí</a></h2>
+<ul>
+  <li>Chceme iniciovat výzkum, vývoj a nasazení nových technologických řešení, která sníží spotřebu elektrické energie a zvýší efektivitu její výroby.</li>
+  <li>Recyklace se musí vyplatit přímo těm, kteří mají snahu recyklovat.</li>
+  <li>Energetiku stavíme na inovacích.</li>
+  <li>Ekologicky rozvíjíme města i krajinu.</li>
+</ul>
+
+
+<hr/>
+
 <h2 id="otevreme_hospodareni">1. Otevřeme hospodaření kraje</h2>
 
 <h4>Zprůhledníme financování</h4>
@@ -312,7 +360,7 @@ a dalších organizací zřizovaných krajem.</b>
   pro informování občanů.</p>
 
 
-<h3>6. Investujeme do vzdělání</h3>
+<h3 id="investujeme_do_vzdelani">6. Investujeme do vzdělání</h3>
 
 <h5>Kvalitní školy se nám vyplatí</h5>
 
